# rl-sample-mpc

./: .gitignore  AI_EXECUTION_PROMPT_TACTICAL_RL.md  TACTICAL_ACADOS_HEURISTIC_DEBUG_INSTRUCTIONS.md  cja-template.tex  planning_method_comparison.md  point_mass_ode_ocp.json  tactical_decision_architecture.md  traj_planner.cpp  决策层引入V1.md
dual_combat/: __init__.py  a2rl_obstacle_carver.py  (+22 more)
tactical_acados/race24_planner_cvxopt/: CMakeLists.txt  package.xml
tactical_acados/race24_planner_cvxopt/config/: config.yaml  remote_config.yaml
tactical_acados/race24_planner_cvxopt/config/tracks/Global_Line/: BaseLine.csv  BaseLine_suzuka_forlocal.csv  CarData.csv  LeftLine.csv  LeftLineold.csv  MiddleLine.csv  PitLine2.csv  PitLine2old.csv  PitLine2oldold.csv  RaceLine.back  RaceLine.csv  RaceLine80.csv  RaceLine_ax02_aday11085.csv  RaceLine_ca_gao_minc.csv  RaceLine_suzuka.csv  RaceLine_suzuka_0508.csv  RaceLine_suzuka_108.csv  RaceLine_suzuka_125041102mue06.csv  RaceLine_suzuka_12508.csv  RaceLine_suzuka_125081102.csv  RaceLine_suzuka_125081102mue04.csv  RaceLine_suzuka_125081102mue06.csv  RaceLine_suzuka_125081102mue065.csv  RaceLine_suzuka_125081102mue07.csv  RaceLine_suzuka_dis04_mue06_plus125.csv  RaceLine_yas_tireay05.csv  RightLine.csv  adrome_combined.csv  suzuka_combined.csv
tactical_acados/race24_planner_cvxopt/config/tracks/Global_Line/autoold/: BaseLine.csv  PitLine1.csv  RaceLine.csv
tactical_acados/race24_planner_cvxopt/config/tracks/Global_Line/suzuka/: BaseLine.csv  PitLine1.csv  PitLine2.csv
tactical_acados/race24_planner_cvxopt/config/tracks/Global_Line/yasold/: RaceLine.csv
tactical_acados/race24_planner_cvxopt/config/tracks/North_Line/: BaseLine.csv  CarData2025.csv  LeftLine.csv  LeftLine1_north_googole_25_070407.csv  LeftLine2_north_googole_35_070407.csv  MiddleLine.csv  MiddleLine_north.csv  MiddleLine_north_google2012.csv  MiddleLine_north_google2012_v2.csv  MiddleLine_north_yang.csv  MiddleLine_north_yang2012.csv  PitLine1.csv  PitLine1_hw.csv  PitLine1_hw_1009AM.csv  PitLine1_hw_1010AM.csv  PitLine1_hw_1010PM_new.csv  PitLine1_north_100802.csv  PitLine1_north_1010AM_29KPH.csv  PitLine1_north_1010AM_29KPH_v2.csv  PitLine1_north_1010AM_29KPH_v3.csv  PitLine1_north_1010AM_29KPH_v4.csv  PitLine1_north_1010AM_29KPH_v5.csv  PitLine1_north_1010AM_29KPH_v6.csv  PitLine_hw_1008PM.csv  RaceLine_0909085.csv  RaceLine_11_14_0610115_1725_fix19_exp095.csv  RaceLine_11_14_0610115_1725_fix20_exp085.csv  RaceLine_11_14_0610115_1725_fix20_exp09.csv  RaceLine_11_14_0610115_1725_fix20_exp10.csv  RaceLine_11_14_0610115_1725_fix22_exp085.csv  RaceLine_11_15_0610115_1725_fix19_exp09.csv  RaceLine_11_15_0610115_1725_fix19_exp10.csv  RaceLine_11_15_0610115_1725_fix19_exp105.csv  RaceLine_11_15_0610115_1725_fix19_exp110.csv  RaceLine_north_091801.csv  RaceLine_north_cardata1007.csv  RaceLine_north_google_100708.csv  RaceLine_north_google_100810_2616.csv  RaceLine_north_google_v2_1414_zx_061010.csv  RaceLine_north_google_v2_2030_zx_060810.csv  (+28 more)
tactical_acados/race24_planner_cvxopt/config/tracks/South_Line/: LeftLine.csv  PitLine.csv  PitLine1.csv  RaceLine.csv
tactical_acados/race24_planner_cvxopt/config/tracks/South_Line_for_real/: BaseLine.csv  LeftLine.csv  MiddleLine.csv  PitLine2.csv  RaceLine.csv  RightLine.csv
tactical_acados/race24_planner_cvxopt/config/tracks/South_Line_for_real/041504/: MiddleLine.csv  line_chuli.m
tactical_acados/race24_planner_cvxopt/config/tracks/South_Line_old/: BaseLine.csv  LeftLine.csv  MiddleLine.csv  RaceLine.csv  RightLine.csv  TestLine.csv
tactical_acados/race24_planner_cvxopt/config/tracks/South_Line_old/041504/: BaseLine.csv  PitLine2.csv  RightLine.csv  yas_bounds_addoff.csv
tactical_acados/race24_planner_cvxopt/config/tracks/bak/: BaseLine.csv  CarData.csv  LeftLine.csv  MiddleLine.csv  PitLine1.csv  PitLine_to_j.json  PitLinev2_to_j.json  RaceLine.csv  RaceLine120.csv  RaceLine12271403curt_to_j.json  RaceLine125.csv  RaceLine130.csv  RaceLine85.csv  RaceLine_0227_to_j.json  RaceLinenew0212_to_j.json  RightLine.csv  pitlane_BIT_no_redline.json  south_left.json  south_right.json
tactical_acados/race24_planner_cvxopt/include/planner/: gg_manager.hpp  mpcfollow.hpp  optim_planner.hpp  pi_controller.hpp  plan.back  planner.h  planner_client.h  remote_server.h  sampling_planner.hpp  sampling_planner.hpp.bak  targets_detection.h  utils.h  vel_profile_fb.hpp
tactical_acados/race24_planner_cvxopt/launch/: planner.launch.py
tactical_acados/race24_planner_cvxopt/scripts/: gen_sampling_raceline.py  north_line_3d_smoothed.csv  ocp_monitor.py  point_mass_ode_ocp.json  regenerate_ocp_solver.py
tactical_acados/race24_planner_cvxopt/scripts/gg_north_line/: ax_max.npy  ax_min.npy  ay_max.npy  g_list.npy  gg_exponent.npy  rho.npy  v_list.npy
tactical_acados/race24_planner_cvxopt/src/: main.cpp  optim_planner.cpp  planner.cpp  remote_server.cpp  sampling_planner.cpp  timer.cpp
tactical_acados/race24_tactical_planner_ros2/: package.xml  point_mass_ode_ocp.json  run_ros2_closedloop.py  run_ros2_closedloop.py.bak  run_viz.py  setup.py
tactical_acados/race24_tactical_planner_ros2/data/global_racing_lines/: yasnorth_3d_rl_as_ref_eav25_car_gg_0.1.csv
tactical_acados/race24_tactical_planner_ros2/launch/: ros2_closedloop.launch.py  tactical_planner.launch.py
tactical_acados/race24_tactical_planner_ros2/src/: track3D.py
tactical_acados/race24_tactical_planner_ros2/tactical_acados/: a2rl_obstacle_carver.py  acados_planner.py  follow_module.py  game_value.py  observation.py  opponent.py  planner_guidance.py  point_mass_ode_ocp.json  sim_acados_only.py  sim_tactical.py
tactical_acados/race24_tactical_planner_ros2/tactical_acados/policies/: __init__.py  heuristic_policy.py  rl_policy.py
tactical_acados/race24_tactical_planner_ros2/tactical_acados/scenarios/: scenario_a.yml
tactical_acados/race24_tactical_planner_ros2/tactical_planner_ros2/: sim_env_node.py  tactical_planner_node.py
tactical_acados/ros2_node/: package.xml  setup.cfg  setup.py
tactical_acados/ros2_node/tactical_planner_ros2/: __init__.py  tactical_planner_node.py
(+125 files in other folders)
