<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner_cvxopt</name>
  <version>0.0.1</version>
  <description>Planner module.</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>rcutils</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>utils</depend>
  <depend>nlohmann-json-dev</depend>

  <depend>a2rl_bs_msgs</depend>
  <depend>autonoma_msgs</depend>
  <depend>eav24_bsu_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Export the package so that it can be found by other packages -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
