<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tactical_planner_ros2</name>
  <version>0.1.0</version>
  <description>
    ROS2 Python node wrapping the tactical (RL / heuristic) planner.
    Subscribes to ego localization, ego state, opponent detections;
    publishes ReferencePath trajectory and diagnostic topics.
  </description>
  <maintainer email="lyx@a2rl.io">lyx</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>a2rl_bs_msgs</exec_depend>
  <exec_depend>autonoma_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
